--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 }
 
 .title-fixed {
+    padding: 5px 0;
     box-sizing: border-box;
     max-width: 100%;
     height: 100%;
@@ -35,9 +36,11 @@
     flex: 0 1 300px;
     max-width: 100%;
     height: 100px;
+    border-radius: 50%;
     background-position: center;
     background-color: aquamarine;
     background-size: cover;
+    background-position-y: -25px;
     background-repeat: no-repeat;
     background-image: url('../assets/logo2/ia-logo.jpg');
     border: 1px;
