--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
     height: 100vh;
     background-attachment: fixed;
     background-blend-mode: multiply;
-    background-color: aquamarine;
-    background-image: url("../images/background.jpg");
+    background-color: cadetblue;
+    background-image: url("../images/project2.png");
     background-size: cover;
     background-position: center;
     justify-content: center;
@@ -24,6 +24,7 @@
 
 .title-fixed {
     padding: 5px 0;
+    position: relative;
     box-sizing: border-box;
     max-width: 100%;
     height: 100%;
@@ -32,20 +33,15 @@
     justify-content: center;
 }
 
-.title-fixed .logo-page {
-    flex: 0 1 300px;
-    max-width: 100%;
-    height: 100px;
-    border-radius: 50%;
+.title-fixed  .logo-page {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0 1 400px;
+    background-clip: border-box;
     background-position: center;
-    background-color: aquamarine;
     background-size: cover;
-    background-position-y: -25px;
-    background-repeat: no-repeat;
-    background-image: url('../assets/logo2/ia-logo.jpg');
-    border: 1px;
-    border-style: hidden;
-    box-shadow: 5px 5px  10px 1px  cadetblue;
+    background-image: url('../assets/logo/alien1-removebg.png');
 }
 
 .title-fixed .job-decs-page  {
@@ -64,21 +60,16 @@
 }
 
 .body-page {
-    padding: 4px;
-    margin-bottom: 10px;
     box-sizing: border-box;
-    width: 600px;
-    display: grid;
-    grid-auto-columns: auto;
-    justify-items: center;
-    grid-gap: 4px;
-    justify-content: space-around;
-    align-content: space-around;
-    /* grid-auto-rows: repeat(auto-fill, minmax(300px, 1fr)); */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .body-proyect-page {
-    width: 300px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     background-color: salmon;
 }
 
@@ -96,7 +87,6 @@
 
 .info-image {
     height: 400px;
-    background-color: brown;
     background-color: cadetblue;
     background-image: url('../images/image1.jpg');
     background-blend-mode: multiply;
@@ -149,12 +139,10 @@
     background-color: black ;
 }
 
-
 .icon {
     font-size: 2em;
     color:whitesmoke;
 }
-
 
 #contact {
     width: 100%;
@@ -200,9 +188,7 @@
     color: #8e8e8e !important
 }
 
-
 @media (max-width: 750px) {
-
     .article {
         padding: 15px 0 !important;
         float: none !important;
@@ -212,5 +198,200 @@
     #contact p,#contact li {
         padding: 5px 20px
     }
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color:cadetblue;
+    border-radius: 4px;
+}
+
+.grid-container {
+    display: grid;
+    justify-content: center;
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(270px, 1fr);
+    max-width: calc(100%-5px);
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.grid-row,
+.grid-item {
+    display: block;
+    overflow: hidden;
+}
+  
+.grid-item img {
+    -o-object-fit: contain;
+        object-fit: contain;
+    -o-object-position: center;
+        object-position: center;
+    width: 100%;
+    height: 100%;
+}
+  
+.grid-item {
+    transform: translateY(-10%);
+    opacity: 0;
+    transition: 600ms transform cubic-bezier(0.55, 0.055, 0.675, 0.19), 600ms opacity cubic-bezier(0.55, 0.055, 0.675, 0.19) 300ms;
+}
+
+.grid-item:nth-child(2n) {
+    transform: translateX(100%);
+    transition: 600ms transform cubic-bezier(0.55, 0.055, 0.675, 0.19), 600ms opacity cubic-bezier(0.55, 0.055, 0.675, 0.19) 300ms;
+} 
+
+.grid-item.inview {
+    margin: 20px;
+    box-shadow:  gray  5px 5px 5px 5px;
+    border: 1px solid gray;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.project-layout {
+    display: flex;
+    margin-top: 10px;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    flex-direction: column;
+    align-items: center;
 
 }
+
+.body-project-title h1{
+    padding: 20px;
+    font-size: 5vW;
+}
+
+.body-project-page {
+    display: flex;
+    width: 60%;
+    justify-content: center;
+}
+
+.overlay {
+    opacity: 0;
+    transform: translateY(100%);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(23,233,89, 0.6);
+}
+
+.grid-item:nth-child(2n+1) div[class~="overlay"]  {
+    transform: translateX(100%); 
+}
+
+.grid-item:nth-child(2n+1):hover div[class~="overlay"]  {
+    opacity: 1;
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in;
+    transform: translateX(0);
+    background-color: rgba(223,233,89, 0.6);
+}
+
+.grid-item:nth-child(2n):hover .overlay{
+    opacity: 1;
+    transform: translateY(0px);
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in;
+    background-color: rgba(23,233,89, 0.6);
+}
+
+.animation:nth-child(2n) {
+    transform: translateX(0%);
+}
+
+
+@keyframes amimacion {
+    0% {
+        opacity: 0;
+    }
+}
+
+
+
+/* loader item */
+
+.loader {
+    transform: rotateZ(45deg);
+    perspective: 1000px;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    color: #fff;
+  }
+    .loader:before,
+    .loader:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: inherit;
+      height: inherit;
+      border-radius: 50%;
+      transform: rotateX(70deg);
+      animation: 1s spin linear infinite;
+    }
+    .loader:after {
+      color: rgb(16, 43, 44);
+      transform: rotateY(70deg);
+      animation-delay: .4s;
+    }
+
+  @keyframes rotate {
+    0% {
+      transform: translate(-50%, -50%) rotateZ(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotateZ(360deg);
+    }
+  }
+
+  @keyframes rotateccw {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(-360deg);
+    }
+  }
+
+  @keyframes spin {
+    0%,
+    100% {
+      box-shadow: .2em 0px 0 0px currentcolor;
+    }
+    12% {
+      box-shadow: .2em .2em 0 0 currentcolor;
+    }
+    25% {
+      box-shadow: 0 .2em 0 0px currentcolor;
+    }
+    37% {
+      box-shadow: -.2em .2em 0 0 currentcolor;
+    }
+    50% {
+      box-shadow: -.2em 0 0 0 currentcolor;
+    }
+    62% {
+      box-shadow: -.2em -.2em 0 0 currentcolor;
+    }
+    75% {
+      box-shadow: 0px -.2em 0 0 currentcolor;
+    }
+    87% {
+      box-shadow: .2em -.2em 0 0 currentcolor;
+    }
+  }
+
+
